--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,45 +1,52 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
- 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Not to forget that's why blog
-email: viz.ply@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-   Write an awesome description for your new site here. You can edit this
-   line in _config.yml. It will appear in your document head meta (for
-   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-  url: "" # the base hostname & protocol for your site, e.g. http://example.com
-  twitter_username: jekyllrb
-  github_username:  jekyll
- 
-# Build settings
-markdown: kramdown
-theme: jekyll-theme-cayman
-plugins:
-   jekyll-feed
- 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+title: Electron
+email: electron@github.com
+description: 'Build cross platform desktop apps with JavaScript, HTML, and CSS.'
+url: 'https://electron.atom.io'
+twitter_username: ElectronJS
+github_username: electron
+future: true
+excerpt_separator: '---'
+gems:
+    - jekyll-redirect-from
+    - jekyll-sitemap
+    - jekyll-seo-tag
+    - jekyll-feed
+    - jemoji
+sass:
+    style: compressed
+collections:
+    docs: {output: true, permalink: '/docs/:path/'}
+defaults:
+    - {scope: {type: docs}, values: {layout: docs}}
+    - {scope: {type: posts}, values: {layout: post, permalink: '/blog/:year/:month/:day/:title'}}
+    - {scope: {path: ""}, values: {image: {path: /images/opengraph.png, width: 1200, height: 630}}}
+exclude:
+    - node_modules
+    - README.md
+    - LICENSE.md
+    - CNAME
+    - Gemfile
+    - Gemfile.lock
+    - Gruntfile.js
+    - package.json
+    - script
+    - spec
+include:
+    - _pages
+google_site_verification: eOAFtDphTbbm4OPKva2d3Z0Z_2bBxWMGdkD0IRQ6VeA
+twitter:
+    username: ElectronJS
+logo: /images/opengraph.png
 
-
+# github.com/untra/polyglot
+languages:
+  - en
+default_lang: en
+exclude_from_localization:
+  - bower_components
+  - css
+  - images
+  - js
+  - lib
+  - script
+parallel_localization: true
